resolve deprecation warnings in int test